test/good/generics/complex04.px

func g<A,C>(x: A, y: C): A*C def
    return x, y

func f<A,B>(x: A, y: B): A*B def
    return g(x, y)

print f(3, 6)
