test/bad/lambdas/lambda03.px

func f(g: Char->Char): Char def
    return g('x')

f(lambda: 'y')
